<resources>
    <string name="drawer_name">홍서현</string>
    <string name="drawer_user">고객님!</string>
    <string name="drawer_notice">공지사항</string>
    <string name="drawer_center">고객센터</string>
    <string name="drawer_police">철도범죄신고</string>
    <string name="drawer_ktx">KTX 특송</string>
    <string name="drawer_setting">설정</string>
    <string name="drawer_text5">대표 나희승, 대전광역시 동구 중앙로 240</string>
    <string name="drawer_text1">사업자등록번호 314-82-10024</string>
    <string name="drawer_text2">통신판매업신고 대전동구-0233호</string>
    <string name="drawer_text3">고객센터 1544-7788</string>
    <string name="drawer_text4">개인정보처리방침 | 여객 운송약관                                                                            한국철도공사</string>

    <string name="main_title">승차권 예매</string>
    <string name="main_semiTitle">내일로 두번째 이야기</string>
    <string name="main_from">출발</string>
    <string name="main_to">도착</string>
    <string name="main_oneWay">편도</string>
    <string name="main_mutual">왕복</string>
    <string name="main_fromStation">서울</string>
    <string name="main_toStation">부산</string>
    <string name="main_due">사용기간</string>
    <string name="main_passenger">승객 연령 및 좌석수</string>
    <string name="main_person">어른 1명</string>
    <string name="main_pay">결제수단</string>
    <string name="main_card">신한카드</string>
    <string name="main_book">예매하기</string>

    <string name="app_name">Korail-AOS</string>
    <string name="bottom_train">승차권예매</string>
    <string name="bottom_discount">할인⋅정기권</string>
    <string name="bottom_product">관광상품</string>
    <string name="bottom_ticket">승차권확인</string>

    <string name="information_tool_bar_title">내일로 두번째 이야기</string>
    <string name="information_agree">동의 안내</string>
    <string name="information_caution">타인 양도 불가</string>
    <string name="information_first_content">내일로 두번째 이야기 패스의 <font color="#0B4199">기명인</font>만\n사용가능하며 <font color="#0B4199">타인 양도가 절대 불가</font>합니다.</string>
    <string name="information_first_description">(부정사용 시 최대 30배 부가운임 징수)</string>
    <string name="information_current_page">%d/5</string>
    <string name="information_second_caution">이용 가능 열차</string>
    <string name="information_ktx">KTX</string>
    <string name="information_ktx_des">KTX의 좌석 2회 ( 1일 1회, 총 2회)\n KTX의 입석(자유석) 이용 불가</string>
    <string name="information_common">일반열차</string>
    <string name="information_common_des">ITX-청춘, ITX-새마을, 새마을,\n무궁화, 누리로, 통근열차의 좌석 (1일 2회)\n일반열차 입석(자유석)</string>
    <string name="information_third_des">일반 예매에서 남아있더라도\n <font color="#0B4199">내일로 패스</font>로 이용할 수 있는\n 좌석 및 자유석은 <font color="#0B4199">별도 범위 적용</font>을 받으므로,\n 원하는 요일이나 시간대의 열차 이용이\n 불가할 수 있습니다.</string>
    <string name="information_third_caution">별도 범위 지정</string>
    <string name="information_fourth">적립대상 제외</string>
    <string name="information_fourth_des">열차의 지연, 운행중지, 도중 여행중지 등에\n따른 <font color="#0B4199">보상 및 마일리지\n 적립대상에서 제외</font>됩니다.</string>
    <string name="information_five_des">내국인만 구매 가능하며,\n <font color="#0B4199">권종별 연중 최대 4회까지만 이용이 가능</font>합니다.</string>
    <string name="information_five_agree">위 주의사항에 동의하십니까?</string>
    <string name="information_five_caution">이용 횟수 제한</string>
    <string name="information_agree_btn">동의</string>
    <string name="information_disagree_btn">비동의</string>

    <!--  ticket  -->
    <string name="ticket_title">승차권 확인</string>
    <string name="ticket_verify">승차권</string>
    <string name="ticket_pass">정기권⋅패스</string>
    <string name="ticket_verify_title">내일로 2.0 연속 7일권</string>
    <string name="ticket_verify_from">부터</string>
    <string name="ticket_verify_to">까지</string>
    <string name="ticket_verify_user_info">탑승자 정보</string>
    <string name="ticket_verify_ticket_num">승차권 번호</string>
    <string name="ticket_verify_warning">*캡쳐한 승차권은 부가운임 대상입니다.</string>

    <string name="ticket_verify_empty">예매하신 승차권이 없습니다.</string>
    <string-array name="ticket_array">
        <item>승차권</item>
        <item>정기권⋅패스</item>
    </string-array>
    <string name="ticket_verify_user_info_content">%1$s | %2$s</string>
</resources>