<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_agree_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="48dp"
        android:text="@string/information_agree"
        android:textAppearance="@style/H4"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caution_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/information_second_caution"
        android:textAppearance="@style/H3"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/tv_agree_information"
        app:layout_constraintTop_toBottomOf="@+id/tv_agree_information" />

    <ImageView
        android:id="@+id/iv_second_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_information_trains"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caution_information" />

    <TextView
        android:id="@+id/tv_second_ktx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:text="@string/information_ktx"
        android:textAppearance="@style/H4"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/iv_second_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_second_content" />

    <TextView
        android:id="@+id/tv_second_ktx_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/information_ktx_des"
        android:textAppearance="@style/B2"
        android:textColor="@color/gray_11"
        app:layout_constraintStart_toStartOf="@+id/tv_second_ktx"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_ktx" />

    <TextView
        android:id="@+id/tv_second_common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/information_common"
        android:textAppearance="@style/H4"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/tv_second_ktx_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_ktx_content" />

    <TextView
        android:id="@+id/tv_second_common_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/information_common_des"
        android:textAppearance="@style/B2"
        android:textColor="@color/gray_11"
        app:layout_constraintStart_toStartOf="@+id/tv_second_common"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_common" />

</androidx.constraintlayout.widget.ConstraintLayout>