<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_agree_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="30dp"
        android:text="@string/information_agree"
        android:textAppearance="@style/H4"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caution_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/information_fourth"
        android:textAppearance="@style/H3"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/tv_agree_information"
        app:layout_constraintTop_toBottomOf="@+id/tv_agree_information" />

    <ImageView
        android:id="@+id/iv_fourth_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_information_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caution_information" />

    <TextView
        android:id="@+id/tv_fourth_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/information_fourth_des"
        android:textAlignment="center"
        android:textAppearance="@style/B6"
        android:textColor="@color/gray_11"
        app:layout_constraintEnd_toEndOf="@+id/iv_fourth_content"
        app:layout_constraintStart_toStartOf="@+id/iv_fourth_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_fourth_content" />

</androidx.constraintlayout.widget.ConstraintLayout>