<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_04"
    tools:context=".presentation.ticket.TicketVerifyFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ticket_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="21dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ticket_verify_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:text="@string/ticket_verify_title"
                android:textAppearance="@style/H4"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ticket_verify_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:textAppearance="@style/H3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_title"
                tools:text="2022년 11월 5일 (수)" />

            <TextView
                android:id="@+id/tv_ticket_verify_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:text="@string/ticket_verify_from"
                android:textAppearance="@style/B2"
                android:textColor="@color/gray_10"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_verify_start_date"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_ticket_verify_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/H3"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_start_date"
                tools:text="2022년 11월 12일 (수)" />

            <TextView
                android:id="@+id/tv_ticket_verify_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:text="@string/ticket_verify_to"
                android:textAppearance="@style/B2"
                android:textColor="@color/gray_09"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_verify_end_date"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_ticket_verify_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/ticket_verify_user_info"
                android:textAppearance="@style/H4"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="@id/tv_ticket_verify_end_date"
                app:layout_constraintTop_toBottomOf="@id/tv_ticket_verify_end_date" />

            <TextView
                android:id="@+id/tv_ticket_verify_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textAppearance="@style/H1"
                android:textColor="@color/gray_12"
                app:layout_constraintStart_toStartOf="@id/tv_ticket_verify_end_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_user_title"
                tools:text="홍서현" />

            <TextView
                android:id="@+id/tv_ticket_verify_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/B8"
                android:textColor="@color/gray_12"
                app:layout_constraintStart_toStartOf="@id/tv_ticket_verify_end_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_user_name"
                tools:text="여 ㅣ 2002년 02월 12일" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="21dp"
                android:src="@drawable/ic_barcode"
                app:layout_constraintBottom_toBottomOf="@id/tv_ticket_verify_user_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_ticket_verify_user_title" />

            <TextView
                android:id="@+id/tv_ticket_verify_ticket_num_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/ticket_verify_ticket_num"
                android:textAppearance="@style/H4"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="@id/tv_ticket_verify_user_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_user_info" />

            <TextView
                android:id="@+id/tv_ticket_verify_ticket_num_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:textAppearance="@style/B2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_verify_ticket_num_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_ticket_verify_ticket_num_title"
                tools:text="82211-0827-10827-87 " />

            <TextView
                android:id="@+id/tv_ticket_verify_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:background="@color/light_blue"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:textAppearance="@style/H4"
                android:textColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/tv_ticket_verify_ticket_num_title"
                tools:text="2022-11-8  15:20:08" />

            <TextView
                android:id="@+id/tv_ticket_verify_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:paddingBottom="10dp"
                android:text="@string/ticket_verify_warning"
                android:textAppearance="@style/B2"
                android:textColor="@color/gray_09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ticket_verify_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ticket_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_ticket_empty_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:src="@drawable/ic_ticket_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_verify_empty"
            android:textAppearance="@style/B3"
            android:textColor="@color/gray_09"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ticket_empty_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>